--- a/try_some_layers.ipynb
+++ b/try_some_layers.ipynb
@@ -371,7 +371,7 @@
     }
    ],
    "source": [
-    "# Practice: Create a network with three hidden layers each with ten neurons.\n",
+    "#network with three hidden layers each with ten neurons.\n",
     "Layers = [2, 10, 10, 10, 3]\n",
     "model = Net(Layers)\n",
     "learning_rate = 0.01\n",
