--- a/Multiple Channel Convolution.ipynb
+++ b/Multiple Channel Convolution.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=center><font size = 5> Multiple Channel Convolution </font></h1>"
+    "<h1 align="center"><font size=5> Multiple Channel Convolution </font></h1>"
    ]
   },
   {
